--- a/phonebook/package.json
+++ b/phonebook/package.json
@@ -10,7 +10,8 @@
     "build:ui": "rm -rf dist && cd ./phonebookFrontend/ && npm run build && cp -r dist ../../phonebook",
     "deploy": "fly deploy",
     "deploy:full": "npm run build:ui && npm run deploy",
-    "logs:prod": "fly logs"
+    "logs:prod": "fly logs",
+    "lint": "eslint ."
   },
   "author": "Jon Love",
   "license": "ISC",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.4.10",
+    "eslint": "^8.51.0",
     "nodemon": "^3.0.1"
   }
 }
